# full_stack_engine

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
framework/: Cargo.toml  README.md  build.rs  fse.toml
framework/locales/: de.json  en.json
framework/macros/: Cargo.toml
framework/macros/src/: lib.rs  model.rs  resource.rs
framework/src/: auth.rs  auth_module.rs  cron.rs  error.rs  i18n.rs  lib.rs  mail.rs  models.rs  modules.rs  prelude.rs  rate_limiter.rs  render.rs  roles.rs  structs.rs  testing.rs  uploads.rs
framework/src/models/: form.rs  mod.rs  resource.rs  routes.rs
framework/tests/: auth_module_http.rs  i18n.rs  locales_http.rs  models_http.rs  models_registry.rs  modules_http.rs  roles.rs  uploads.rs  uploads_csp.rs
framework/tests/fixtures/locales/: de.json  en.json  fr.json
framework/tests/fixtures/module_locales/: de.json  en.json
framework/tests/fixtures/templates/: index.html
fse-orm/cli/: Cargo.toml
fse-orm/cli/src/: config.rs  lib.rs  main.rs  migrate.rs  modules.rs  prepare.rs
fse-orm/cli/tests/: migrate.rs
fse-orm/macros/: Cargo.toml
fse-orm/macros/src/: codegen.rs  db_enum.rs  filter.rs  find.rs  insert.rs  lib.rs  lookup.rs  relation.rs  table.rs  update.rs
fse-orm/runtime/: Cargo.toml
fse-orm/runtime/src/: builder.rs  column.rs  lib.rs
fse-orm/schema/: Cargo.toml
fse-orm/schema/src/: diff.rs  error.rs  lib.rs  model.rs  parse.rs  snapshot.rs  sql.rs
fse-orm/schema/tests/: schema.rs
fse-orm/tests-app/: Cargo.toml  build.rs
fse-orm/tests-app/tests/: crud.rs  dynamic.rs  find.rs  injection.rs  keywords.rs  relations.rs  untrusted_input.rs
starter/: .dockerignore  .example.env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  fse.toml
starter/.agent/workflows/: create-route.md
starter/.fse/: schema.json
starter/.github/workflows/: docker-publish.yml  test.yml
starter/.sqlx/: query-029b25878b9ba1a40394045614677c9c3bf1605e27845af68727f65cad441347.json  query-047602139e31c7e381a226d581e33d0fb72d5d98a2412f11e6b286aadf5d6189.json  query-07dd826dfe779b71e3058cc4f69ba74df07a95b05d1b7ec983a30045473f2aa0.json  query-0990885f534abb2e768b93cd12531ff35dad7877d9b537ebfbf75a6c25a7a20d.json  query-0a3ab49b19aa56a2122ba7375a54b92de5d304a36adc159433ad40bd23488e81.json  query-11204164dfe45577724439ea29a2ccd91557aa140390c5ca982888d415be8d4b.json  query-128672925fa04ce5078552ca432beda854e064df19146f7328f9d012b6233d71.json  query-14791defbfa4836b6658b0ca85bf4d32f1dad5ab1ba7716dd97d585ade81995b.json  query-16e91c8d3a0eb76892d97b55cf94b336f58ce480896ac8ec2c47100f8b28a2b6.json  query-1ab62c96ea63de854ed03445c83a9ca56ee09294cb11e3080e89f0d4d7c71a24.json  query-1b3d90fa64614a60b9f38e9c092b4a22988aa85a8d32522aa720525a1c34e7cb.json  query-1c554211fc676a9880629cb688707df731f2053ba52f30938955c02a84ff3406.json  query-1f8658e67b21862f3b88ddb7289c9a9ff58ecc94dfead11e56e05c0bbd3d762b.json  query-256073ac8c092f6d3ee853503463cc47d4c0ee8929a7bb3650a2aeb59d970f36.json  query-25b7b230484896522cdaad814bb936c2b4f4eed1df123f771a8098782d4ad49d.json  query-27dea66254336070f9bb7761837bdfd6cea2a24d7943e25d2fa2e018c261952e.json  query-2c42e3ba4c825ad44607e252df9d0c4d3829eca29694c04144ab45f02b391ffd.json  query-2ca34a86034b5b71253c5780518967c4ec97e79fcf5ecc0687c620c75b897514.json  query-34e88146eb715cfc2060447e40f60155aaea0531e959eeec82218f77ab11d2c4.json  query-360c30db353d7266a44263e6cf8ad674958335d57c6717e442f7e81052a4af52.json  query-3eb0198b1a892cfb284a71441fc2b2422eec2c8fdd29fadaa8d037cc6c804090.json  query-3f2b3f3cbc49667f8e152988e613d56d629e7f15ef5cfd5405adbb62706b3d55.json  query-3f7c8573e064ba7baf64054090210e6e349cd7392a8b9f351a716af6bba9f7b3.json  query-3f8f149eedce39f9caedbe31009507d7e6b1b023e742bf2a05c04db01026b640.json  query-4140946f4d8e1655ade7e2ce05ffbae7d70e36528f2158cc3b7bf9295ca9ef8a.json  query-41d5438803d0079794cd3b7d69409e7fa7459061ef55864ac11ccf6ad248b9cc.json  query-460cde2012ddffe3f3ff2c2e9851d2de57f00f2939817167f2f4471c9759e885.json  query-47234bb8f2c840667270e11fe533b3b68696315a950ee747820566b18b7bc62b.json  query-4deb5bf9f17d6968933dd745c041094c6c2578c52e30cb900b3a85fe2eebff7d.json  query-510c436e844338195e4f8b4ed35e46b9cf0b562858d3c006c6cbf66cd75f86ab.json  query-52667b557d82776681d655d3b73d9b2aded96fdf2786e25ae5329da057ea12ef.json  query-55855227f2514764b77fc93c318c48012927228cff5e063168255a5431c4dd56.json  query-5730e19a8881f754c362f2f9331301c81e8be5b6c3865e8741d5fba64970df9d.json  query-5734e63d91f539a7daebf51cf63e1e4370739d4d29d8818f2c77a237364dc3c4.json  query-59ecdf500c5252cf47b2415dcb8c0f76313e0abd741ecf5bbf9cf19c87b8a6c5.json  query-5a869b32dabe22997743310268a9b641f1a36186399faff18742c3b1bc9eb0c2.json  query-5c9d56d3a48d1cf41fd577de3de7c11d72bd1a855a328c031418f399ad141629.json  query-5e727a9f7e07932e54805ce5c3ecc58c51f1b0b0b4e9ace9b93b3450412dd060.json  query-5eda32eb3cd9c3f46cfdb7c8d49012a99e701f1c4caa935421b508aeeea2eeb3.json  query-5f0f261cf127f9ec7e308bc94f50345f547a52631fe025281b36c93eaeac2f7c.json  (+49 more)
starter/locales/: de.json  en.json
starter/migrations/: 20240916111027_init.sql  20260326162825_email_verification.sql  20260414020333_password_reset.sql  20260415145811_email_change_verification.sql  20260415145811_init.sql  20260703120000_token_expiry.sql  20260706000001_init.sql  20260706000002_products.sql  20260706000003_orders.sql  20260706223835_create_orders_create_products_create_users.sql  20260706223836_seed_admin.sql
starter/src/: lib.rs  main.rs  render.rs  roles.rs
starter/src/cronjobs/: mod.rs
starter/src/frontend/: .gitignore  astro.config.mjs  package.json  tailwind.config.mjs  tsconfig.json
starter/src/frontend/src/: env.d.ts
starter/src/models/: mod.rs  order.rs  product.rs  user.rs
starter/src/services/: api.rs  forgot_password.rs  index.rs  login.rs  logout.rs  mod.rs  orders.rs  products.rs  products_public.rs  register.rs  reset_password.rs  settings.rs  tests.rs  users.rs
starter/src/tables/: mod.rs  order.rs  product.rs  user.rs
starter/tests/: products.rs  services.rs  templates.rs
starter/tests/common/: mod.rs
(+92 files in other folders)
