[package]
name = "full_stack_engine"
version = "4.1.2"
edition = "2024"
description = "A lightweight, opinionated Rust web framework built on top of Actix-web, SQLx, and Tera."
license = "MIT OR Apache-2.0"
repository = "https://github.com/StevenUster/full_stack_engine"
readme = "README.md"
keywords = ["web", "framework", "actix-web", "sqlx", "tera"]
categories = ["web-programming"]
# The proc-macro crate is a separate nested package, not part of this one.
exclude = ["macros/"]

[lib]
name = "full_stack_engine"
path = "src/lib.rs"

[dependencies]
# The fse ORM ships with the framework: schema-driven migrations plus
# compile-time-checked queries (see the prelude re-exports).
fse-orm = { version = "0.3.1", path = "../fse-orm/runtime" }
# The model registry: derive(Model) re-parses structs with fse-schema and
# registers them via inventory for boot-time route generation.
full_stack_engine_macros = { version = "0.1.0", path = "macros" }
fse-schema = { version = "0.3.1", path = "../fse-orm/schema" }
inventory = "0.3"
actix-web = "4.12.1"
actix-files = "0.6.9"
actix-governor = "0.10.0"
tokio-cron-scheduler = { version = "0.15.1", features = ["signal"] }
tera = "1.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
] }
dotenv = "0.15.0"
include_dir = "0.7.4"
mime_guess = "2.0.5"
env_logger = "0.11.8"
log = "0.4.29"
rust-argon2 = "3.0.0"
rand = "0.9.2"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
thiserror = "2.0.18"
futures = "0.3.31"
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
lettre = { version = "0.11.19", features = [
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
actix-multipart = "0.7.2"
uuid = { version = "1.23.3", features = ["v4"] }

[build-dependencies]
# The build script creates the integration tests' scratch database from the
# #[model] structs in tests/ (see build.rs).
fse-schema = { version = "0.3.1", path = "../fse-orm/schema" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
# Integration tests are separate crates, so shared deps are repeated here.
actix-multipart = "0.7.2"
tokio = { version = "1", features = ["macros", "rt"] }
tempfile = "3"
serde_json = "1.0"
include_dir = "0.7.4"
