[package]
name = "starter"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
actix-web = "4.14.0"
actix-multipart = "0.7.2"
actix-files = "0.6.10"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
] }
dotenv = "0.15.0"
uuid = { version = "1.23.3", features = ["v4"] }
full_stack_engine = "4.1.1"
# The ORM runtime. Direct dependency because the query macros expand to
# `::fse_orm::...` paths (same reason sqlx is a direct dependency).
fse-orm = "0.3.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
