[package]
name = "fse-cli"
description = "The fse binary: generates and applies sqlx migrations from #[derive(Table)] structs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fse"
path = "src/main.rs"

[dependencies]
fse-schema = { path = "../schema" }
