[package]
name = "fse-orm-macros"
description = "Proc macros for the fse ORM: derive(Table), derive(DbEnum), find! and update!."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
fse-schema = { path = "../schema" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
